      are broken across lines with a comment or have embedded spaces.

    - The TeX builders should now work with tex files that are generated
      by another program. Thanks to Hans-Martin von Gaudecker for
      isolating the cause of this bug.

  From Russel Winder:

    - Add support for DMD version 2 (the phobos2 library).

RELEASE 2.0.1 - Mon, 15 Aug 2010 15:46:32 -0700

  From Dirk Baechle:

    - Fix XML in documentation.

  From Joe Zuntz:

    - Fixed a case-sensitivity problem with Fortran modules.

  From Bauke Conijn:

    - Added Users Guide example for auto-generated source code

  From Steven Knight:

    - Fix explicit dependencies (Depends()) on Nodes that don't have
      attached Builders.

  From Matt Hughes:

    - Fix the ability to append to default $*FLAGS values (which are
      implemented as CLVar instances) in a copied construction environment
      without affecting the original construction environment's value.

  From Rob Managan:

    - Updated the TeX command strings to include a /D on Windows in
      case the new directory is on a different drive letter.

    - Fixed the LaTeX scanner so dependencies are found in commands that
      are broken across lines with a comment or have embedded spaces.


RELEASE 2.0.0.final.0 - Mon, 14 Jun 2010 22:01:37 -0700

  From Dirk Baechle:

    - Fix XML in documentation.

  From Steven Knight:

    - Provide forward compatibility for the 'profile' module.

    - Provide forward compatibility for the 'pickle' module.

    - Provide forward compatibility for the 'io' module.

    - Provide forward compatibility for the 'queue' module.

    - Provide forward compatibility for the 'collections' module.

    - Provide forward compatibility for the 'builtins' module.

    - Provide forward compatibility for 'sys.intern()'.

    - Convert to os.walk() from of os.path.walk().

    - Remove compatibility logic no longer needed.

    - Add a '-3' option to runtest to print 3.x incompatibility warnings.